--- a/app/views/shared/_team_menu.html.erb
+++ b/app/views/shared/_team_menu.html.erb
@@ -1,13 +1,35 @@
-<ul>
-<%if current_user.is_team_admin_of?(team)%>
-  <li><%= link_to "编辑队伍信息", edit_team_path(team)%></li>
-  <li><%= link_to "创建训练", new_team_training_path(team)%></li>
-  <li><%= link_to "成员管理", team_team_joins_path(team)%></li>
-  <li><%= link_to "申请加入的用户", team_team_join_requests_path(team)%></li>
-  <li><%= link_to "所有邀请", team_team_join_invitations_path(team)%></li>
-  <li><%= link_to "邀请朋友加入", new_team_team_join_invitation_path(team)%></li>
-<%end%>  
-  <%if current_user.can_invite_team?(@team)%>
-    <li><%= link_to "邀请该队参加比赛", new_match_invitation_path(:guest_team_id=>@team)%></li>
+<div>
+<%if logged_in? %>
+<ul class="level_1_menu">
+  <% is_admin = current_user.is_team_admin_of?(team)%>
+  <% is_member = current_user.is_team_member_of?(team)%>
+  <%= render(:partial=>"utils/menu_item", :locals => {:name => '成员', 
+      :links=>[
+        link_to("#{team.shortname}的成员", team_team_joins_path(team)),
+        (!is_admin ? nil : link_to("成员管理", admin_team_joins_path(:team_id => team)))
+      ]}) %>
+  <%= render(:partial=>"utils/menu_item", :locals => {:name => '训练', 
+      :links=>[
+        link_to("#{team.shortname}的训练", team_trainings_path(team)),
+        (!is_admin ? nil : link_to("创建新训练", new_team_training_path(team)))
+      ]}) %>
+  <%= render(:partial=>"utils/menu_item", :locals => {:name => '入队邀请', 
+      :links=>[
+        link_to("申请加入#{team.shortname}的用户", team_team_join_requests_path(team)),
+        link_to("#{team.shortname}发出的邀请", team_team_join_invitations_path(team)),
+        (!is_admin ? nil : link_to("邀请朋友加入", new_team_team_join_invitation_path(team))),
+      ]}) %>
+  <%= render(:partial=>"utils/menu_item", :locals => {:name => '比赛邀请', 
+      :links=>[
+        link_to("#{team.shortname}的比赛邀请", '#'),
+        current_user.can_invite_team?(@team) ? nil : link_to("邀请该队参加比赛", new_match_invitation_path(:guest_team_id=>@team))
+      ]}) %>
+  <%if is_admin%>
+  <%= render(:partial=>"utils/menu_item", :locals => {:name => '设置', 
+      :links=>[
+        link_to("编辑队伍信息", edit_team_path(team))
+      ]}) %>
   <%end%>
 </ul>
+<%end%>
+</div>
