--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -14,4 +14,4 @@
 <%= f.text_field :style %></p>
 
 <p><label for="summary">球队简介</label><br/>
-<%= f.text_area :summary %></p>
+<%= f.text_area :summary, :cols=>40, :rows=>15 %></p>
