--- a/app/views/user_views/show.html.erb
+++ b/app/views/user_views/show.html.erb
@@ -1,11 +1,37 @@
-<h1><%=h @title%></h1>
+<%content_for(:javascript) do%>
+  <%= javascript_include_tag "jquery.dimensions.js" %>
+  <%= javascript_include_tag "ui.mouse.js" %>
+  <%= javascript_include_tag "ui.dialog.js" %>
+<%end%>
 
-<div class="tab_container">
-  <a class="tab_link" href="#">基本信息</a>
+<%content_for(:stylesheet) do%>
+  <%= stylesheet_link_tag 'calendar' %>
+  <%= stylesheet_link_tag 'activityitem' %>
+<%end%>
+
+<h1><%=h @title%></h1>
+<div id="left_content">
+<div class="seperateLine"></div>
+
+<div class="tab_container" style="margin:10px 0 20px 0">
+  <span class="tab_link" style="margin-left: 10px;">个人信息</span>
   <%if @user.is_playable%>
-  <a class="tab_link" href="#">球员信息</a>
+  <span class="tab_link">球员信息</span>
+  <%end%>
+  <%if logged_in? && @user.id != current_user.id %>
+    <span style="margin:30px;">
+    <%= link_to(image_tag("sendMail.gif", :title=>"给#{@user.nickname}发信", :class=>"shortcut_icon"), 
+      new_message_path(:to=>@user.id))%>
+    <%= link_to(image_tag("inviteFriend.gif", :title=>"不和他玩", :class=>"shortcut_icon"), 
+      friend_relation_path(0, :user_id=>@user.id),:method=>"delete") if current_user.is_my_friend?(@user) %>
+    <%= link_to(image_tag("inviteFriend.gif", :title=>"申请和#{@user.nickname}成为好友", :class=>"shortcut_icon"), 
+      new_friend_invitation_path, :onclick=>'j("#senf_friend_invitation_div").dialog("open");return false') if !current_user.is_my_friend?(@user) %>
+    <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请#{@user.nickname}加入球队", :class=>"shortcut_icon"),
+      new_team_join_invitation_path(:user_id => @user.id)) %>
+    </span>
   <%end%>
   <div class="tab">
+  <%= "<span>昵称: #{@user.nickname}</span><br/>" %>
   <%= "<span>所在地: #{@user.city_text}</span><br/>" unless @user.city_text.nil?%>
   <%= "<span>生日: #{@user.birthday_text}</span><br/>" unless @user.birthday_text.nil?%>
   <%= "<span>年龄: #{@user.age}</span><br/>" unless @user.age.nil?%>
@@ -27,24 +53,56 @@
   <%end%>
 </div>
 
-<div>
-  <h1><%=h @user.nickname%>的朋友</h1>
+<%#if logged_in? && @user.id != current_user.id %>
+<%#= link_to("不和他玩", friend_relation_path(0, :user_id=>@user.id),:method=>"delete") if current_user.is_my_friend?(@user) %>
+<%#= link_to("给#{@user.nickname}发信", new_message_path(:to=>@user.id))%>
+<%#= link_to("申请和#{@user.nickname}成为好友", new_friend_invitation_path, 
+  :onclick=>'j("#senf_friend_invitation_div").dialog("open");return false') if !current_user.is_my_friend?(@user) %>
+<%#= link_to("邀请#{@user.nickname}加入球队", new_team_join_invitation_path(:user_id => @user.id)) %>
+<%#end%>
+
+
+<%if logged_in? && @user.id != current_user.id && !current_user.is_my_friend?(@user)%>
+<div id="senf_friend_invitation_div" class="jdialog">
+  <% form_for :friend_invitation, :url => friend_invitations_path, :method=>"POST" do |f| %>
+      <%= f.hidden_field :host_id,  :value=>@user.id%>
+      <span>留言</span><br />
+      <%= f.text_area :message, :cols => 30, :rows => 2%>
+      <%= f.submit "发送邀请" %>
+  <% end %>  
+</div>
+<%end%>
+
+<div class="seperateLine"></div>
+<div style="margin-bottom:20px">
+  <h2><%=h @user.nickname%>的朋友</h2>
   <%= render(:partial => 'shared/user_icon', :collection => @friends)%>
 </div>
 
-<div>
-  <h1><%=h @user.nickname%>参加的球队</h1>
+<div class=" clearBoth seperateLine"></div>
+<div style="margin-bottom:20px">
+  <h2><%=h @user.nickname%>参加的球队</h2>
   <%= render(:partial => 'shared/team_icon', :collection => @teams)%>
 </div>
-
-<div>
-  <h1><%=h @user.nickname%>最近的训练</h1>
-  <%= render(:partial => 'shared/training_list', :object => @trainings)%>
 </div>
 
-<div>
-  <h1><%=h @user.nickname%>的日程</h1>
-  <h2><%= Date.today.strftime("%m月, %Y")%></h2>
-  <%= render(:partial => 'shared/calendar', 
+<div id="right_content">
+<%if @trainings.length > 0%>
+  <div class="seperateLine clearBoth"></div>
+    <div style="margin-bottom:20px">
+    <h2><%=h @user.nickname%>最近一次训练</h2>
+    <div class="activity" style="border:none; padding: 0px 20px 10px 20px;">
+      <%= render :partial=>"shared/training_item", :locals => {:training => @trainings[0]}%>
+      <div class="clearBoth"></div>
+    </div>
+  </div>
+<%end%>
+
+  <div class="seperateLine clearBoth"></div>
+  <h2><%=h @user.nickname%>的日程</h2>
+  <%= render(:partial => 'shared/highlight_calendar', 
+    :locals => {:date => Date.today, :trainings => @calendar_trainings_hash})%>
+  <%#= render(:partial => 'shared/calendar', 
     :locals => {:year => Date.today.year, :month => Date.today.month, :trainings => @calendar_trainings_hash})%>
 </div>
+<div class="clearBoth"></div>
