--- a/app/views/layouts/team_layout.html.erb
+++ b/app/views/layouts/team_layout.html.erb
@@ -6,29 +6,24 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= @title ? @title : h(@team.name)%></title>
   <%= javascript_include_tag "jquery-1.2.3.min.js" %>
-  <%= javascript_include_tag "jquery.dimensions.js" %>
-  <%= javascript_include_tag "ui.mouse.js" %>
-  <%= javascript_include_tag "ui.dialog.js" %>
   <%= javascript_include_tag "application" %>
-  <%#= stylesheet_link_tag 'scaffold' %>
+  <%= yield :javascript%>
+  <%= stylesheet_link_tag 'wefootball' %>
+  <%= yield :stylesheet%>
 </head>
 <body>
+<div id="main_content">
+<div id="header">
+  <%= link_to team_image_tag(@team), team_view_path(@team), :id=>"header_icon" %>
+  <%= link_to h(@team.shortname), team_view_path(@team), :id=>"header_name"%>
 
-<div>
-  <%= link_to team_image_tag(@team), team_view_path(@team) %>
-  <h1><%= link_to h(@team.shortname), team_view_path(@team)  %></h1>
-
-  <%if logged_in?%>
-    <%= link_to("我的设置", edit_user_path(current_user))%>
-    <%= link_to "退出", session_path(0), :method=>:delete %>
-  <%else%>
-    <%= link_to "登录", new_session_path %>
-  <%end%>
+  <%= render(:partial => 'shared/header_setting')%>
+  <%= render(:partial => 'shared/team_menu', :locals => {:team => @team})%>
 </div>
 
-<%= render(:partial => 'shared/team_menu', :locals => {:team => @team})%>
-
+<div id="content">
 <%= yield  %>
-
+</div>
+</div>
 </body>
 </html>
