--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -1,14 +1,30 @@
-<h1><%= @title%></h1>
-
-<div>
-<%= "<span>所在地: #{@team.city_text}</span><br/>" unless @team.city_text.nil?%>
-<%= "<span>建队时间: #{@team.found_time}</span><br/>" unless @team.found_time.nil?%>
-<%= "<span>球队全名: #{@team.name}</span><br/>" unless @team.name.blank?%>
-<%= "<span>球队风格: #{@team.style}</span><br/>" unless @team.style.blank?%>
-<%if !@team.summary.nil? && !@team.summary.blank?%>
-    <label>球队简介：</label>
-    <p><%=simple_format auto_link(@team.summary, :urls)%></p>
+<%content_for(:javascript) do%>
+  <%= javascript_include_tag "jquery.dimensions.js" %>
+  <%= javascript_include_tag "ui.mouse.js" %>
+  <%= javascript_include_tag "ui.dialog.js" %>
 <%end%>
+
+<%content_for(:stylesheet) do%>
+  <%= stylesheet_link_tag 'calendar' %>
+  <%= stylesheet_link_tag 'activityitem' %>
+<%end%>
+
+<h1><%=h @title%></h1>
+<div id="left_content">
+<div class="seperateLine"></div>
+
+<div class="tab_container" style="margin:10px 0 20px 0">
+  <span class="tab_link" style="margin-left: 10px;">队伍信息</span>
+  <div class="tab" style="margin-right:40px">
+  <%= "<span>球队全名: #{@team.name}</span><br/>" unless @team.name.blank?%>
+  <%= "<span>所在地: #{@team.city_text}</span><br/>" unless @team.city_text.nil?%>
+  <%= "<span>建队时间: #{@team.found_time}</span><br/>" unless @team.found_time.nil?%>
+  <%= "<span>球队风格: #{@team.style}</span><br/>" unless @team.style.blank?%>
+  <%if !@team.summary.nil? && !@team.summary.blank?%>
+      <label>球队简介：</label>
+      <p><%=simple_format auto_link(@team.summary, :urls)%></p>
+  <%end%>
+  </div>
 </div>
 
 <div>
@@ -18,6 +34,12 @@
 <%else%>
   <%= link_to("申请加入球队", '#', :onclick=>'javascript:j("#send_team_join_request_div").dialog("open");return false;')%>
 <%end%>
+<%end%>
+<%if logged_in? && current_user.is_team_admin_of?(@team)%>
+  <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
+<%end%>
+<%if logged_in? && current_user.can_invite_team?(@team) %>
+  <%=link_to("邀请该队参加比赛", new_match_invitation_path(:guest_team_id=>@team))%>
 <%end%>
 </div>
 
@@ -31,22 +53,40 @@
   <% end %>  
 </div>
 <%end%>
-      
-<h1><%=h @team.shortname%>的成员</h1>
-<%= render(:partial => 'shared/user_icon', :collection => @users)%>
 
-<h1><%=h @team.shortname%>最近的训练</h1>
-<%= render(:partial => 'shared/training_list', :object => @trainings)%>
-  
-<div>
-  <h1><%=h @team.shortname%>的日程</h1>
-  <h2><%= Date.today.strftime("%m月, %Y")%></h2>
-  <%= render(:partial => 'shared/calendar', 
-    :locals => {:year => Date.today.year, :month => Date.today.month, :trainings => @calendar_trainings_hash})%>
+<%if @trainings.length > 0%>
+<div class="seperateLine clearBoth"></div>
+<div style="margin-bottom:20px">
+<h2><%=h @team.shortname%>最近一次训练</h2>
+<div class="activity" style="border:none; padding: 0px;">
+  <%= render :partial=>"shared/training_item", :locals => {:training => @trainings[0], :display_team => false}%>
+  <div class="clearBoth"></div>
+</div>
+</div>
+<%end%>
+
+<div class="seperateLine clearBoth"></div>
+<div style="margin-bottom:20px">        
+<h2><%=h @team.shortname%>的成员</h2>
+<%= render(:partial => 'shared/user_icon', :collection => @users)%>
+</div>
 </div>
 
-<h1><%=h @team.shortname%>下的讨论</h1>
-<%= render(:partial => 'shared/post_list', :object => @posts)%>
+<div id="right_content">
+<div class=" clearBoth seperateLine"></div>
+<div style="margin-bottom:20px">
+  <h2><%=h @team.shortname%>的日程</h2>
+  <%= render(:partial => 'shared/highlight_calendar', 
+    :locals => {:date => Date.today, :trainings => @calendar_trainings_hash})%>
+  <div class="clearBoth"></div>
+</div>
 
-<br />
-<%= link_to '发言', new_team_post_path(@team) %>
+<div class="seperateLine clearBoth"></div>
+<div style="margin-bottom:20px">   
+  <h2><%=h @team.shortname%>下的讨论</h2>
+  <%= render(:partial => 'shared/post_list', :object => @posts)%>
+  <br />
+  <%= link_to '发言', new_team_post_path(@team) %>
+</div>
+</div>
+<div class="clearBoth"></div>
