--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,21 +1,25 @@
 <%= error_messages_for :team %>
 
-<% form_for @team do |f| %>
+<div class="tab_container" style="margin:10px 0 20px 0">
+<span class="tab_link" style="margin-left: 10px;">修改基本信息</span>
+<span class="tab_link">修改队标</span>
+<%= link_to "成员管理", admin_team_joins_path(:team_id => @team), :class=>"tab_link"%>
 
+<% form_for @team,:html => { :class=>"tab"} do |f| %>
 <%= render :partial => "form", :locals=>{:f=> f}%>
-
-<p><%= submit_tag '修改' %></p>
+<p><%= f.submit '保存' %></p>
 <% end %>
 
-<% form_for(:team, :url => update_image_team_path(@team),:html => { :method=>:put, :multipart => true }) do |f| %>
-  <%= team_image_tag @team %>
+<% form_for(:team, :url => update_image_team_path(@team),:html => { :method=>:put, :multipart => true, :class=>"tab" }) do |f| %>
+  <%= team_image_tag @team, {:style=>"margin:20px 0 0 0"} %>
   <p>
     <label>更改队标</label><br/>
     <%= f.file_field  :uploaded_data %>
   </p>
 
   <p>
-    <%= f.submit "Update" %>
+    <%= f.submit "保存" %>
   </p>
 <% end %>
+</div>
 
